Update Open Graph and Twitter meta tags with full URLs and enhanced descriptions

--- a/index.html
+++ b/index.html
@@ -10,16 +10,28 @@
       property="og:description"
       content="Real-time visualization and threat assessment of asteroid 2024 YR4. Current Torino Scale: 3. Interactive 3D orbital visualization."
     />
-    <meta property="og:image" content="og_threat_assessment.png" />
+    <meta
+      property="og:image"
+      content="https://raw.githubusercontent.com/kazazes/2024YR4/main/og_threat_assessment.png"
+    />
     <meta property="og:type" content="website" />
     <!-- Twitter Card Meta Tags -->
     <meta name="twitter:card" content="summary_large_image" />
+    <meta name="twitter:site" content="@pkcodes" />
+    <meta name="twitter:creator" content="@pkcodes" />
     <meta name="twitter:title" content="Asteroid 2024 YR4 Threat Assessment" />
     <meta
       name="twitter:description"
-      content="Real-time visualization and threat assessment of asteroid 2024 YR4. Current Torino Scale: 3. Interactive 3D orbital visualization."
+      content="⚠️ ALERT: Torino Scale 3 asteroid detected. Interactive 3D visualization of potential Earth impact scenarios."
     />
-    <meta name="twitter:image" content="og_threat_assessment.png" />
+    <meta
+      name="twitter:image"
+      content="https://raw.githubusercontent.com/kazazes/2024YR4/main/og_threat_assessment.png"
+    />
+    <meta
+      name="twitter:image:alt"
+      content="Visualization showing asteroid 2024 YR4's orbit intersecting with Earth's orbit"
+    />
     <!-- Retro digital font -->
     <link
       href="https://fonts.googleapis.com/css2?family=VT323&display=swap"
