--- a/index.html
+++ b/index.html
@@ -100,7 +100,8 @@
         letter-spacing: 2px;
         text-shadow: 0 0 10px #0f0;
         animation: flicker 5s infinite;
-        font-size: 1.2em;
+        font-size: 1.6em;
+        line-height: 1.4;
       }
       @keyframes flicker {
         0% {
@@ -135,16 +136,17 @@
         text-align: left;
         font-weight: bold;
         text-shadow: 0 0 10px rgba(255, 0, 0, 0.8);
-        background: rgba(20, 0, 0, 0.8);
+        background: rgba(20, 0, 0, 0.9);
         padding: 20px;
         border: 1px solid rgba(255, 0, 0, 0.3);
-        font-size: 1.1em;
+        font-size: 1.4em;
+        line-height: 1.4;
         z-index: 100;
       }
       #countdown,
       #simDate {
-        margin-top: 10px;
-        font-size: 1.2em;
+        margin-top: 15px;
+        font-size: 1.3em;
       }
       .torino-3 {
         color: #f00;
@@ -176,12 +178,12 @@
         display: flex;
         flex-direction: column;
         gap: 10px;
-        font-size: 1.2em;
+        font-size: 1.4em;
       }
       #controls label {
         display: flex;
         align-items: center;
-        margin: 5px 0;
+        margin: 8px 0;
         cursor: pointer;
       }
       /* Custom checkbox toggle */
@@ -210,17 +212,17 @@
         background: rgba(0, 20, 0, 0.8);
         color: #0f0;
         border: 1px solid #0f0;
-        padding: 5px;
+        padding: 8px;
         margin: 10px 0;
         width: 100%;
         cursor: pointer;
-        font-size: 1em;
+        font-size: 1.1em;
       }
       #simulateImpact {
         background: #f00;
         color: white;
         border: none;
-        padding: 10px 20px;
+        padding: 12px 20px;
         margin-top: 10px;
         cursor: pointer;
         text-transform: uppercase;
@@ -228,6 +230,7 @@
         letter-spacing: 2px;
         animation: button-pulse 2s infinite;
         width: 100%;
+        font-size: 1.2em;
       }
       @keyframes button-pulse {
         0% {
@@ -248,12 +251,12 @@
         background: #0f0;
         color: #000;
         border: none;
-        padding: 8px 12px;
+        padding: 10px 15px;
         cursor: pointer;
         text-transform: uppercase;
         font-weight: bold;
         margin-top: 10px;
-        font-size: 1em;
+        font-size: 1.2em;
       }
       /* Warning overlay */
       .warning-overlay {
@@ -369,12 +372,13 @@
         background: rgba(0, 20, 0, 0.8);
         color: #0f0;
         border: 1px solid #0f0;
-        padding: 5px 10px;
+        padding: 8px 15px;
         cursor: pointer;
         text-transform: uppercase;
         font-family: "VT323", monospace;
         margin-top: 10px;
         animation: button-glow 2s infinite;
+        font-size: 1.2em;
       }
       @keyframes button-glow {
         0% {
@@ -463,7 +467,16 @@
         color: #0f0;
         font-family: "VT323", monospace;
         text-align: left;
-        font-size: 1.2em;
+        font-size: 1.4em;
+        line-height: 1.5;
+      }
+      .modal-content h2 {
+        font-size: 1.6em;
+        margin-bottom: 20px;
+      }
+      .modal-content p,
+      .modal-content li {
+        margin-bottom: 15px;
       }
       .close-button {
         color: #0f0;
@@ -506,14 +519,15 @@
         }
 
         #info {
-          font-size: 1em;
+          font-size: 1.4em;
+          padding: 10px;
         }
 
         #risk-info {
           width: 90%;
           left: 5%;
-          font-size: 0.9em;
-          padding: 10px;
+          font-size: 1.2em;
+          padding: 15px;
         }
 
         /* Show only info button on mobile */
@@ -526,12 +540,12 @@
           color: #000;
           border: none;
           padding: 12px;
-          width: 50px;
-          height: 50px;
+          width: 60px;
+          height: 60px;
           border-radius: 50%;
           cursor: pointer;
           font-weight: bold;
-          font-size: 1.2em;
+          font-size: 1.6em;
           box-shadow: 0 0 10px rgba(0, 255, 0, 0.5);
           z-index: 1000;
           display: flex;
@@ -544,15 +558,18 @@
           width: 90%;
           max-height: 90vh;
           overflow-y: auto;
-          font-size: 1em;
-          padding: 15px;
+          font-size: 1.2em;
+          padding: 20px;
         }
 
         /* Adjust warning overlay for mobile */
         .warning-overlay {
-          font-size: 18px;
-          width: 90%;
-          text-align: center;
+          font-size: 1.4em;
+        }
+
+        #console-content {
+          font-size: 1.2em;
+          line-height: 1.5;
         }
       }
 
