--- a/index.html
+++ b/index.html
@@ -1355,5 +1355,20 @@
         });
       })();
     </script>
+    <!-- Google tag (gtag.js) -->
+    <!-- Google tag (gtag.js) -->
+    <script
+      async
+      src="https://www.googletagmanager.com/gtag/js?id=G-MKMRM4RR89"
+    ></script>
+    <script>
+      window.dataLayer = window.dataLayer || [];
+      function gtag() {
+        dataLayer.push(arguments);
+      }
+      gtag("js", new Date());
+
+      gtag("config", "G-MKMRM4RR89");
+    </script>
   </body>
 </html>
